--- a/packages/libs/coreui/package.json
+++ b/packages/libs/coreui/package.json
@@ -75,6 +75,7 @@
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "storybook": "^6.5.14",
     "typescript": "~4.3.5"
   },
   "peerDependencies": {
